[gd_scene load_steps=7 format=2]

[ext_resource path="res://menu/menu_credits.gd" type="Script" id=1]
[ext_resource path="res://menu/dynamic_font.tres" type="DynamicFont" id=2]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/white_logo.png-417d587854d8832fd65f9e0b69877e95.stex"

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/discord.png-858b26e15c0466b191ca3806c2857b32.stex"

[sub_resource type="DynamicFontData" id=3]
font_path = "res://resources/fonts/Swansea/Swansea-q3pd.ttf"

[sub_resource type="DynamicFont" id=4]
size = 14
use_filter = true
extra_spacing_bottom = 4
font_data = SubResource( 3 )

[node name="MenuCredits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Forground" type="CanvasLayer" parent="."]

[node name="CenterH" type="HBoxContainer" parent="Forground"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="space" type="Control" parent="Forground/CenterH"]
margin_right = 456.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterV" type="VBoxContainer" parent="Forground/CenterH"]
margin_left = 460.0
margin_right = 1460.0
margin_bottom = 1080.0

[node name="space3" type="Control" parent="Forground/CenterH/CenterV"]
margin_right = 1000.0
margin_bottom = 286.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CreditsContainer" type="VBoxContainer" parent="Forground/CenterH/CenterV"]
margin_top = 290.0
margin_right = 1000.0
margin_bottom = 790.0
rect_min_size = Vector2( 1000, 500 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Forground/CenterH/CenterV/CreditsContainer"]
margin_right = 1000.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "menu.credits.dev_comunity_label"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Forground/CenterH/CenterV/CreditsContainer"]
margin_top = 30.0
margin_right = 1000.0
margin_bottom = 96.0
columns = 2

[node name="TextureRect" type="TextureRect" parent="Forground/CenterH/CenterV/CreditsContainer/GridContainer"]
margin_right = 31.0
margin_bottom = 31.0
rect_min_size = Vector2( 31, 31 )
texture = SubResource( 1 )
expand = true

[node name="LinkButtonKalaxia" type="LinkButton" parent="Forground/CenterH/CenterV/CreditsContainer/GridContainer"]
margin_left = 35.0
margin_right = 288.0
margin_bottom = 31.0
hint_tooltip = "https://kalaxia.org"
custom_fonts/font = ExtResource( 2 )
text = "menu.credits.website"

[node name="TextureRect2" type="TextureRect" parent="Forground/CenterH/CenterV/CreditsContainer/GridContainer"]
margin_top = 35.0
margin_right = 31.0
margin_bottom = 66.0
rect_min_size = Vector2( 31, 31 )
texture = SubResource( 2 )
expand = true

[node name="LinkButtonDiscord" type="LinkButton" parent="Forground/CenterH/CenterV/CreditsContainer/GridContainer"]
margin_left = 35.0
margin_top = 35.0
margin_right = 288.0
margin_bottom = 66.0
hint_tooltip = "https://discord.com/invite/mDTms5c"
custom_fonts/font = ExtResource( 2 )
text = "menu.credits.discord"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vSeparator1" type="VBoxContainer" parent="Forground/CenterH/CenterV/CreditsContainer"]
margin_top = 100.0
margin_right = 1000.0
margin_bottom = 250.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelGodotLicence" type="Label" parent="Forground/CenterH/CenterV/CreditsContainer"]
margin_top = 254.0
margin_right = 1000.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 4 )
text = "menu.credits.legal_notice_godot"
autowrap = true

[node name="vSeparator2" type="VBoxContainer" parent="Forground/CenterH/CenterV/CreditsContainer"]
margin_top = 270.0
margin_right = 1000.0
margin_bottom = 420.0
size_flags_vertical = 3

[node name="BackMainMenu" type="Button" parent="Forground/CenterH/CenterV/CreditsContainer"]
margin_top = 424.0
margin_right = 1000.0
margin_bottom = 500.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "menu.credits.back_main_menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="space4" type="Control" parent="Forground/CenterH/CenterV"]
margin_top = 794.0
margin_right = 1000.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="space2" type="Control" parent="Forground/CenterH"]
margin_left = 1464.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
